fix: improved scrollbar colours

--- a/assets/css/scrollbars.css
+++ b/assets/css/scrollbars.css
@@ -17,12 +17,12 @@
 ::-webkit-scrollbar-thumb {
   -webkit-border-radius: var(--scroll-size);
   border-radius: var(--scroll-size);
-  background: var(--color-hl-pink);
+  background: var(--clr-accent--2);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--color-hl-pink-lab-vivid);
+  background: var(--clr-accent--2--1);
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-  background: var(--color-hl-pink-lab-faded-1);
+  background: var(--clr-bg-5);
 }
